# constat

./: .git-blame-ignore-revs  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  chonk.md  config.yaml  entity_extraction.md  fix_demo_advantages.md  install.sh  interfaces.md  maintenance_review.md  plan.md  proof_plan.md  pyproject.toml  query_plan.md  raise_recommendations.csv  raises.xlsx  test_interactive.py  to .xlsx
.claude/agents/: agent-writer.md  architect.md  bug-fixer.md  code-reviewer.md  data-engine-dev.md  debugger.md  doc-writer.md  llm-developer.md  marketer.md  refactorer.md  requirements-tracker.md  sql-analyst.md  test-strategist.md
.claude/refs/: agent-isolation.ref  architecture.ref  boundaries.ref  swarm-mode.ref  task-flow.ref
constat/: __init__.py  cli.py  config.py  context.py  email.py  embedding_loader.py  engine.py  executor.py  feedback.py  keywords.py  keywords.yaml  messages.py  proof_tree.py  repl.py  reranker_loader.py  schema_manager.py  session.py  suggestions.py  textual_repl.py
constat-jupyter/: pyproject.toml
constat-jupyter/constat_jupyter/: __init__.py  client.py  config.py  entity_cache.py  graphql.py  magic.py  models.py  progress.py  session.py  widgets.py
constat-ui/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
constat-ui/coverage/: clover.xml  coverage-final.json  index.html
constat-ui/src/: App.tsx  index.css  main.tsx  test-setup.ts  vite-env.d.ts
constat/api/: __init__.py  factory.py  impl.py  learning.py  protocol.py  summarization.py  types.py
constat/catalog/: __init__.py  api_catalog.py  api_executor.py  api_schema_manager.py  glossary_builder.py  preload_cache.py  schema_manager.py  sql_transpiler.py  svo_client.py
constat/commands/: __init__.py  base.py  data.py  diagnostic.py  help.py  registry.py  renderers.py  session_cmds.py  sources.py
constat/core/: __init__.py  agent_matcher.py  agents.py  config.py  domain_tiers.py  models.py  paths.py  resource_validation.py  resources.py  role_matcher.py  roles.py  skill_matcher.py  skill_packager.py  skills.py  source_config.py  sources.py  tiered_config.py
constat/data/: mcp_catalog_seed.json
constat/deploy/: __init__.py  applier.py  cli.py  differ.py  script.py  sensitive.py
constat/discovery/: __init__.py  api_tools.py  concept_detector.py  doc_cache.py  doc_tools.py  entity_extractor.py  fact_tools.py  glossary_generator.py  models.py  ner_fingerprint.py  relationship_extractor.py  schema_tools.py  skill_tools.py  tools.py  unified_discovery.py  vector_store.py
constat/execution/: __init__.py  dag.py  engine.py  executor.py  exemplars.yaml  fact_resolver.py  intent.py  intent_classifier.py  mode.py  parallel_scheduler.py  planner.py  problog_resolver.py  prompt_sections.py  repl_matcher.py  scratchpad.py
constat/learning/: __init__.py  compactor.py  exemplar_generator.py  fine_tune_manager.py  fine_tune_providers.py  fine_tune_registry.py  simple_exporter.py
constat/llm/: __init__.py  wrappers.py
constat/mcp/: __init__.py  api_provider.py  catalog.py  change_probe.py  client.py  document_provider.py  pool.py
constat/prompts/: __init__.py  analyze_question.md  answer_personal_question.md  detect_ambiguity.md  discovery_system.md  engine_schema_tools.yaml  engine_system.md  engine_template.md  explain_differentiators.md  explain_reasoning_methodology.md  extract_facts_from_response.md  followup_context.md  help_strings.yaml  image_description.txt  inference_prompt.md  knowledge_prompt.md  meta_question_patterns.yaml  planner_system.md  planner_template.md  replan_after_input.md  retry.md  schema_tools.yaml  step_prompt_template.md  step_system_prompt.md  system_capabilities.md  tier2_assessment.md  vera_personality.yaml
constat/providers/: __init__.py  anthropic.py  api_providers.py  base.py  document_providers.py  factory.py  gemini.py  grok.py  llama.py  mistral.py  openai.py  prompt_logger.py  router.py  sql_provider.py
constat/repl/: __init__.py  feedback.py  interactive.py
constat/server/: __init__.py  _chonk_warmup.py  _warmup_hashes.py  accounts.py  app.py  auth.py  config.py  diff_generators.py  entity_state.py  local_auth.py  models.py  permissions.py  persona_config.py  personas.yaml  role_config.py  roles.yaml  session_manager.py  source_refresher.py  user_preferences.py  user_tokens.py  vault.py  websocket.py
constat/session/: __init__.py  _analysis.py  _auditable.py  _core.py  _dag.py  _execution.py  _follow_up.py  _handbook.py  _intents.py  _metadata.py  _plans.py  _prompts.py  _resources.py  _solve.py  _synthesis.py  _types.py
constat/storage/: __init__.py  _chonk_entity_sync.py  (+24 more)
demo/: chonk.toml  config.yaml  notebook_demo.ipynb  permissions.yaml  setup_demo.py
docs/: DISCOVERY_ARCHITECTURE.md  ENTITY_EXTRACTION_DESIGN.md  architecture.md  auditable.md  config-reference.md  jupyter.md  repl.md  web.md
scripts/: canary_stamp.py  dev.bat  dev.sh  generate-jaeger-data.py  load-sample-data.py  pg-vss.sh  run-jaeger.sh  run-mongodb.sh  run-postgresql.sh  serve_with_restart.sh  start_jupyter.sh
tests/: __init__.py  conftest.py  test_accounts.py  test_api_auth.py  test_api_catalog.py  test_api_error_handling.py  test_api_executor.py  test_api_executor_auth.py  test_audio_transcription.py  test_auditable_nlq.py  test_calendar_ingestion.py  test_canonical_source.py  test_cassandra_integration.py  test_cassandra_unit.py  test_cli.py  test_commands.py  test_concept_detector.py  test_config.py  test_config_db.py  test_config_envvar.py  test_config_llm.py  test_config_tasks.py  test_crawler.py  test_dag.py  test_data_source_normalization.py  test_database_integration.py  test_datastore.py  test_deploy.py  test_deploy_graphql.py  test_diff_generators.py  test_discover_glossary_sources.py  test_discovery_tools.py  test_doc_tools.py  test_doc_tools_excel.py  test_doc_tools_pdf.py  test_doc_tools_word.py  test_document_fact_resolution.py  test_domain_aliases.py  test_domain_enforcement.py  test_domain_tiers.py  (+120 more)
(+480 files in other folders)
