[project]
name = "constat"
version = "0.1.0"
description = "Multi-Step AI Reasoning Engine"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "anthropic>=0.30",
    "pandas>=2.0",
    "httpx>=0.24",
    "python-dotenv>=1.0",
    "requests>=2.28",
    # CLI & REPL
    "rich>=13.0",
    "click>=8.0",
    "prompt_toolkit>=3.0",
    # Visualization (works OOB)
    "plotly>=5.0",
    "altair>=5.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    # Documents (works OOB)
    "pypdf>=4.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
]

[project.optional-dependencies]
# SQL Database backends (SQLite is built-in)
postgresql = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.0"]
duckdb = ["duckdb>=0.9", "duckdb-engine>=0.10"]

# NoSQL connectors
mongodb = ["pymongo>=4.0"]
cassandra = ["cassandra-driver>=3.28"]
elasticsearch = ["elasticsearch>=8.0"]
dynamodb = ["boto3>=1.28"]
cosmosdb = ["azure-cosmos>=4.5"]
firestore = ["google-cloud-firestore>=2.11"]

# Additional LLM providers (Anthropic is built-in)
openai = ["openai>=1.0"]
ollama = ["ollama>=0.1"]

# GraphQL API server
graphql = ["strawberry-graphql>=0.200", "fastapi>=0.100", "uvicorn>=0.23"]

# Graph visualization (requires system graphviz)
graphviz = ["graphviz>=0.20"]

# Development
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "responses>=0.23",
]

# All optional dependencies
all = [
    "constat[postgresql,mysql,duckdb]",
    "constat[mongodb,cassandra,elasticsearch,dynamodb,cosmosdb,firestore]",
    "constat[openai,ollama]",
    "constat[graphql,graphviz]",
]

[project.scripts]
constat = "constat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
