[project]
name = "constat"
version = "0.1.0"
description = "Multi-Step AI Reasoning Engine"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "anthropic>=0.30",
    "pandas>=2.0",
    "httpx>=0.24",
    "python-dotenv>=1.0",
    "requests>=2.28",
    # CLI & REPL
    "rich>=13.0",
    "textual>=0.47",  # TUI framework for persistent status bar
    "click>=8.0",
    "prompt_toolkit>=3.0",  # Enhanced readline/REPL
    "gnureadline>=8.0; sys_platform == 'darwin'",  # Better readline on macOS
    # Visualization (works OOB)
    "plotly>=5.0",
    "altair>=5.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "folium>=0.14",  # Interactive maps
    # Documents (works OOB)
    "pypdf>=4.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "mammoth>=1.6",  # DOCX to HTML conversion
    # Database backends (SQLite is built-in)
    "psycopg2-binary>=2.9",
    "duckdb>=0.9",
    "duckdb-engine>=0.10",
    # SQL dialect transpilation
    "sqlglot>=25.0",
    # LLM providers
    "ollama>=0.1",
    # GraphQL API server
    "strawberry-graphql>=0.200",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "websockets>=10.0",  # Required for WebSocket support
    "python-multipart>=0.0.6",  # Required for FastAPI file uploads
    "google-auth>=2.0",  # Firebase authentication
    # Graph visualization (requires system graphviz)
    "graphviz>=0.20",
    # NLP / Named Entity Recognition
    "spacy>=3.8",
]

[project.optional-dependencies]
# Additional SQL Database backends
mysql = ["pymysql>=1.0"]

# NoSQL connectors
mongodb = ["pymongo>=4.0"]
cassandra = ["cassandra-driver>=3.28"]
elasticsearch = ["elasticsearch>=8.0"]
dynamodb = ["boto3>=1.28"]
cosmosdb = ["azure-cosmos>=4.5"]
firestore = ["google-cloud-firestore>=2.11"]

# Additional LLM providers
openai = ["openai>=1.0"]

# Email formatting
email = ["markdown>=3.4"]

# Extended data processing and document generation
extras = [
    "polars>=0.20",        # Fast DataFrame library
    "xlsxwriter>=3.1",     # Excel files with formatting
    "reportlab>=4.0",      # PDF generation
    "Pillow>=10.0",        # Image processing (PIL)
    "tabulate>=0.9",       # Table formatting (pandas to_markdown)
]

# Development
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-rerunfailures>=12.0",
    "black>=23.0",
    "ruff>=0.1",
    "responses>=0.23",
]

# All optional dependencies
all = [
    "constat[mysql]",
    "constat[mongodb,cassandra,elasticsearch,dynamodb,cosmosdb,firestore]",
    "constat[openai]",
    "constat[email]",
    "constat[extras]",
]

[project.scripts]
constat = "constat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
