[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "constat-jupyter"
version = "0.1.0"
description = "Jupyter notebook client for Constat"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
    "websockets>=11",
    "nest-asyncio>=1.5",
    "polars>=0.20",
]

[project.optional-dependencies]
widgets = ["ipywidgets>=8"]
pandas = ["pandas>=2"]
all = ["constat-jupyter[widgets,pandas]"]
